--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/assets/dex_logo.svg" />
-    <link rel="stylesheet" href="/assets/index.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/index.css" />
     <title>DEX Upload</title>
   </head>
 
