switched the csrf tag in manifest too so that fortify will recognize it

--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -29,7 +29,7 @@
             />
           </div>
           <div class="hidden">
-            <input type="hidden" name="gorilla.csrf.Token" value="{{.CsrfToken}}">
+            <input type="hidden" name="gorilla.csrf.Token" value="{{.CsrfToken}}" />
           </div>
           <div class="submit-button">
             <button type="submit">Next</button>
