--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/assets/dex_logo.svg" />
-    <link rel="stylesheet" href="/assets/index.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/index.css" />
     <title>DEX Upload</title>
   </head>
 
@@ -16,8 +16,8 @@
       <div class="form-container">
         <form method="GET" action="/manifest">
           <div class="input-container">
-            <label for="data_stream">Data Stream</label>
-            <input type="text" id="data_stream" name="data_stream" required />
+            <label for="data_stream_id">Data Stream</label>
+            <input type="text" id="data_stream_id" name="data_stream_id" required />
           </div>
           <div class="input-container">
             <label for="data_stream_route">Data Stream Route</label>
